Fix to css in tenders app to date select position z-index.

--- a/WebContent/Tenders/includes/css/tenders.css
+++ b/WebContent/Tenders/includes/css/tenders.css
@@ -147,7 +147,7 @@ rgba(192,192,192,0.2); */
 
 
 
-
+#closing_date,#addendum_date,#awarded_date { position: relative; z-index: 1000; }
 
 
 
